Corrected the main align

--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,16 @@ body {
     max-width: 470px;
     background: linear-gradient(135deg, #167aff, #a901ff);
     color: #fff;
-    margin: 100px auto 0;
+    margin: 100px auto;
     border-radius: 20px;
-    padding: 350px 25%;
+    padding: 50px 50% 50px 50px;
     text-align: center;
 }
 
 .search{
     width: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
 }
 
@@ -47,4 +47,25 @@ body {
     width: 60px;
     height: 60px;
     cursor: pointer;
+}
+
+.card {
+    width: 90%;
+    max-width: 250px;
+    background: rgba(153, 153, 153, 0.4);
+    border-radius: 45px;
+    color: #252525;
+    padding-bottom: 30px;
+    user-select: none;
+}
+
+.weather-icon{
+    width: 110px;
+    margin-top: 30px;
+}
+
+.day{
+    font-size: 60px;
+    font-weight: 500;
+    margin-top: 20px;
 }
